--- a/settings.yaml
+++ b/settings.yaml
@@ -20,7 +20,7 @@ data:
   local_data_folder: local_data/private_gpt
 
 ui:
-  enabled: true
+  enabled: false
   path: /
   default_chat_system_prompt: >
     You are a helpful, respectful and honest assistant. 
